@@ -25,10 +25,10 @@ __doc__ = 'OpenIDRepository dedicated form class'
 # Django system imports
 from django.conf import settings
 from django.core.validators import RegexValidator
-from django.forms import CheckboxInput, Form, ModelForm, Select, TextInput
+from django.forms import CheckboxInput, Form, ModelForm, Select, TextInput, Textarea
 from django.forms import URLField, BooleanField
 # Django project imports
-from authentication.openid.models import OpenIDRepository, PROVIDERS_TYPE
+from authentication.openid.models import OpenIDRepository, PROVIDERS_TYPE, JWT_SIG_ALG_CHOICES
 from authentication.user_scope.models import UserScope
 
 # Extern modules imports
@@ -49,7 +49,8 @@ class OpenIDRepositoryForm(ModelForm):
     class Meta:
         model = OpenIDRepository
         fields = ('name', 'provider', 'provider_url', 'client_id', 'client_secret', 'scopes', 'use_proxy',
-                  'verify_certificate', 'user_scope')
+                  'verify_certificate', 'user_scope', 'enable_jwt', 'jwt_signature_type', 'jwt_key',
+                  'jwt_validate_audience')
         widgets = {
             'name': TextInput(attrs={'class': 'form-control'}),
             'provider': Select(choices=PROVIDERS_TYPE, attrs={'class': 'form-control select2'}),
@@ -59,7 +60,11 @@ class OpenIDRepositoryForm(ModelForm):
             'scopes': TextInput(attrs={'class': 'form-control', 'data-role': "tagsinput"}),
             'use_proxy': CheckboxInput(attrs={"class": " js-switch"}),
             'verify_certificate': CheckboxInput(attrs={"class": " js-switch"}),
-            'user_scope': Select(attrs={'class': 'form-control select2'})
+            'user_scope': Select(attrs={'class': 'form-control select2'}),
+            'enable_jwt': CheckboxInput(attrs={'class': 'form-control js-switch'}),
+            'jwt_signature_type': Select(choices=JWT_SIG_ALG_CHOICES, attrs={'class': "form-control select2"}),
+            'jwt_key': Textarea(attrs={'class': 'form-control'}),
+            'jwt_validate_audience': CheckboxInput(attrs={'class': 'form-control js-switch'}),
         }
 
     def __init__(self, *args, **kwargs):
@@ -67,7 +72,7 @@ class OpenIDRepositoryForm(ModelForm):
         self.fields['user_scope'].queryset = UserScope.objects.all()
         self.fields['user_scope'].empty_label = "Retrieve all claims"
         # Remove the blank input generated by django
-        for field_name in ['provider']:
+        for field_name in ['provider', 'jwt_signature_type']:
             self.fields[field_name].empty_label = None
         # Set all fields as non required
         for field in ["user_scope"]:
@@ -89,6 +94,15 @@ class OpenIDRepositoryForm(ModelForm):
             except json.JSONDecodeError:
                 scopes = [i.replace(" ", "") for i in scopes.split(',')]
         return scopes
+
+    def clean(self):
+        """ If jwt enabled, options required """
+        cleaned_data = super().clean()
+
+        if cleaned_data.get('enable_jwt'):
+            if not cleaned_data.get('jwt_key'):
+                self.add_error('jwt_key', "This field is required when jwt is enabled.")
+
 
 class OpenIDRepositoryTestForm(Form):
     provider_url = URLField()
